fix(side-menu): added slot for icons and corrected collapsed icon placement

--- a/tegel/src/components/side-menu/webcomponent/side-menu-button/side-menu-button.scss
+++ b/tegel/src/components/side-menu/webcomponent/side-menu-button/side-menu-button.scss
@@ -64,6 +64,11 @@ li {
 
       &.collapsed {
         padding: 0;
+
+        slot[name='icon']::slotted(*) {
+          position: relative;
+          left: -2px;
+        }
       }
     }
 
