--- a/tegel/src/components/side-menu/webcomponent/side-menu-dropdown/side-menu-dropdown.scss
+++ b/tegel/src/components/side-menu/webcomponent/side-menu-dropdown/side-menu-dropdown.scss
@@ -47,6 +47,15 @@
         justify-content: center;
         align-items: center;
 
+        &.selected {
+          padding: 0;
+
+          sdds-icon {
+            position: relative;
+            left: -2px;
+          }
+        }
+
         sdds-icon {
           padding-left: 0;
         }
