--- a/tegel/src/components/side-menu/webcomponent/side-menu-link/side-menu-link.scss
+++ b/tegel/src/components/side-menu/webcomponent/side-menu-link/side-menu-link.scss
@@ -66,6 +66,11 @@
 
         &.collapsed {
           padding: 0;
+
+          slot[name='icon']::slotted(*) {
+            position: relative;
+            left: -2px;
+          }
         }
       }
 
